--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -17,4 +17,8 @@
             <button mat-raised-button color="primary" class="w-100">Login</button>
         </form>
     </div>
+    <div class="text-center">
+        <br>
+        <button class="m-20" mat-raised-button type="button" (click)="registerUser()">Create an account</button>
+    </div>
 </div>
