--- a/FrontEnd/src/app/show-product-details/show-product-details.component.html
+++ b/FrontEnd/src/app/show-product-details/show-product-details.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-5">
+    <div *ngIf="showTable">
     <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
         <ng-container matColumnDef="Id">
@@ -55,4 +56,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    </div>
+    <div class="text-center p-5" *ngIf="showLoadMoreProductButton">
+        <button type="button" mat-raised-button color="primary" (click)="loadMoreProduct()"> Load more</button>
+    </div>
 </div>
