--- a/FrontEnd/src/app/show-product-details/show-product-details.component.html
+++ b/FrontEnd/src/app/show-product-details/show-product-details.component.html
@@ -1,4 +1,15 @@
 <div class="container mt-5">
+    <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Search any product</mat-label>
+        <input matInput
+                #searchkeyword
+                (keyup)="searchBykeyword(searchkeyword.value)"
+                name="searchKey"
+                id="searchKey"
+                placeholder="Search any product"
+        >
+        <mat-hint>Search any product</mat-hint>
+    </mat-form-field>
     <div *ngIf="showTable">
     <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
