--- a/FrontEnd/src/app/product-view-details/product-view-details.component.html
+++ b/FrontEnd/src/app/product-view-details/product-view-details.component.html
@@ -1,7 +1,6 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-6">
-
             <div class="card image-container p-3">
                 <img [src]="product.productImages[selectedProductIndex].url" class="product-zoom-image">
             </div>
@@ -28,6 +27,8 @@
                 </div>
                 <div class="mt-5 text-center">
                     <button mat-raised-button color="warn" style="width: 200px;" (click)="buyProduct(product.productId)"> Buy Now</button>
+                    &nbsp;
+                    <button mat-raised-button style="width: 200px;" (click)="addToCart(product.productId)">Add to Cart</button>
                 </div>
             </div>
         </div>
